Bridge should not block listener while making outbound connections

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.0
    • Platforms 2018-06-18
    • 71
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      mongobridge may block new incoming connections for up to 30 seconds while it is connecting out to its proxied mongod. We should do that blocking connect in the client thread instead.

            Assignee:
            Jonathan Reams
            Reporter:
            Jonathan Reams
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: