SERVER-35550 Connect back to server from bridge in client thread

(cherry picked from commit c11dd5e6ff3f70200d1cfd6a5e3dc6966beac3b2)